--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Find My Book</string>
+    <string name="find_your_book_here">Find your book here..</string>
+    <string name="search_background">Search Background</string>
+    <string name="empty_image">Empty Image</string>
 </resources>
